// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button Base Button Snapshot should render with large size 1`] = `
<div>
  <button
    class="css-14xw2fh"
    id="testId"
  >
    Test Text
  </button>
</div>
`;

exports[`Button Base Button Snapshot should render with small size 1`] = `
<div>
  <button
    class="css-ifnsap"
    id="testId"
  >
    Test Text
  </button>
</div>
`;

exports[`Button Base Button Snapshot should render with updated color 1`] = `
<div>
  <button
    class="css-1s4hd94"
    id="testId"
  >
    Test Text
  </button>
</div>
`;

exports[`Button Base Button Snapshot should render with updated shape 1`] = `
<div>
  <button
    class="css-iuuj5t"
    id="testId"
  >
    Test Text
  </button>
</div>
`;

exports[`Button Base Button Snapshot should render with updated textTransform 1`] = `
<div>
  <button
    class="css-1q88xy7"
    id="testId"
  >
    Test Text
  </button>
</div>
`;

exports[`Button Base Button Snapshot should render with updated variant 1`] = `
<div>
  <button
    class="css-1pwk3m0"
    id="testId"
  >
    Test Text
  </button>
</div>
`;

exports[`Button Icon Only Button Snapshot should render with large size 1`] = `
<div>
  <button
    aria-label="Check Icon"
    class="css-1ythpud"
    icon="[object Object]"
    iconposition="right"
    id="testId"
  >
    <svg
      aria-labelledby="testId"
      class="icon"
      fill="currentColor"
      height="24"
      viewBox="0 0 29.37 21.88"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <title
        id="testId"
      />
      <path
        d="M26.71,3.06,11.89,17.88,4.4,10.4.87,13.93l11,11L30.24,6.59Z"
        transform="translate(-0.87 -3.06)"
      />
    </svg>
  </button>
</div>
`;

exports[`Button Icon Only Button Snapshot should render with small size 1`] = `
<div>
  <button
    aria-label="Check Icon"
    class="css-vq4orj"
    icon="[object Object]"
    iconposition="right"
    id="testId"
  >
    <svg
      aria-labelledby="testId"
      class="icon"
      fill="currentColor"
      height="14"
      viewBox="0 0 29.37 21.88"
      width="14"
      xmlns="http://www.w3.org/2000/svg"
    >
      <title
        id="testId"
      />
      <path
        d="M26.71,3.06,11.89,17.88,4.4,10.4.87,13.93l11,11L30.24,6.59Z"
        transform="translate(-0.87 -3.06)"
      />
    </svg>
  </button>
</div>
`;

exports[`Button Icon Only Button Snapshot should render with updated color 1`] = `
<div>
  <button
    aria-label="Check Icon"
    class="css-pl6qc7"
    icon="[object Object]"
    iconposition="right"
    id="testId"
  >
    <svg
      aria-labelledby="testId"
      class="icon"
      fill="currentColor"
      height="18"
      viewBox="0 0 29.37 21.88"
      width="18"
      xmlns="http://www.w3.org/2000/svg"
    >
      <title
        id="testId"
      />
      <path
        d="M26.71,3.06,11.89,17.88,4.4,10.4.87,13.93l11,11L30.24,6.59Z"
        transform="translate(-0.87 -3.06)"
      />
    </svg>
  </button>
</div>
`;

exports[`Button Icon Only Button Snapshot should render with updated shape 1`] = `
<div>
  <button
    aria-label="Check Icon"
    class="css-scu7sf"
    icon="[object Object]"
    iconposition="right"
    id="testId"
  >
    <svg
      aria-labelledby="testId"
      class="icon"
      fill="currentColor"
      height="18"
      viewBox="0 0 29.37 21.88"
      width="18"
      xmlns="http://www.w3.org/2000/svg"
    >
      <title
        id="testId"
      />
      <path
        d="M26.71,3.06,11.89,17.88,4.4,10.4.87,13.93l11,11L30.24,6.59Z"
        transform="translate(-0.87 -3.06)"
      />
    </svg>
  </button>
</div>
`;

exports[`Button Icon Only Button Snapshot should render with updated variant 1`] = `
<div>
  <button
    aria-label="Check Icon"
    class="css-fpi70f"
    icon="[object Object]"
    iconposition="right"
    id="testId"
  >
    <svg
      aria-labelledby="testId"
      class="icon"
      fill="currentColor"
      height="18"
      viewBox="0 0 29.37 21.88"
      width="18"
      xmlns="http://www.w3.org/2000/svg"
    >
      <title
        id="testId"
      />
      <path
        d="M26.71,3.06,11.89,17.88,4.4,10.4.87,13.93l11,11L30.24,6.59Z"
        transform="translate(-0.87 -3.06)"
      />
    </svg>
  </button>
</div>
`;

exports[`Button Icon With Text Button Snapshot should render with large size 1`] = `
<div>
  <button
    aria-label="Check Icon"
    class="css-14xw2fh"
    icon="[object Object]"
    iconposition="right"
    id="testId"
  >
    <span
      class="css-1apg407-SpanTextLeft e1cefif80"
    >
      Test Text
       
    </span>
    <svg
      aria-labelledby="testId"
      class="icon"
      fill="currentColor"
      height="20"
      viewBox="0 0 29.37 21.88"
      width="20"
      xmlns="http://www.w3.org/2000/svg"
    >
      <title
        id="testId"
      />
      <path
        d="M26.71,3.06,11.89,17.88,4.4,10.4.87,13.93l11,11L30.24,6.59Z"
        transform="translate(-0.87 -3.06)"
      />
    </svg>
  </button>
</div>
`;

exports[`Button Icon With Text Button Snapshot should render with medium size 1`] = `
<div>
  <button
    aria-label="Check Icon"
    class="css-1re1hac"
    icon="[object Object]"
    iconposition="right"
    id="testId"
  >
    <span
      class="css-4fhr0b-SpanTextLeft e1cefif80"
    >
      Test Text
       
    </span>
    <svg
      aria-labelledby="testId"
      class="icon"
      fill="currentColor"
      height="16"
      viewBox="0 0 29.37 21.88"
      width="16"
      xmlns="http://www.w3.org/2000/svg"
    >
      <title
        id="testId"
      />
      <path
        d="M26.71,3.06,11.89,17.88,4.4,10.4.87,13.93l11,11L30.24,6.59Z"
        transform="translate(-0.87 -3.06)"
      />
    </svg>
  </button>
</div>
`;

exports[`Button Icon With Text Button Snapshot should render with small size 1`] = `
<div>
  <button
    aria-label="Check Icon"
    class="css-ifnsap"
    icon="[object Object]"
    iconposition="right"
    id="testId"
  >
    <span
      class="css-4fhr0b-SpanTextLeft e1cefif80"
    >
      Test Text
       
    </span>
    <svg
      aria-labelledby="testId"
      class="icon"
      fill="currentColor"
      height="12"
      viewBox="0 0 29.37 21.88"
      width="12"
      xmlns="http://www.w3.org/2000/svg"
    >
      <title
        id="testId"
      />
      <path
        d="M26.71,3.06,11.89,17.88,4.4,10.4.87,13.93l11,11L30.24,6.59Z"
        transform="translate(-0.87 -3.06)"
      />
    </svg>
  </button>
</div>
`;

exports[`Button Icon With Text Button Snapshot should render with updated color 1`] = `
<div>
  <button
    aria-label="Check Icon"
    class="css-1s4hd94"
    icon="[object Object]"
    iconposition="right"
    id="testId"
  >
    <span
      class="css-4fhr0b-SpanTextLeft e1cefif80"
    >
      Test Text
       
    </span>
    <svg
      aria-labelledby="testId"
      class="icon"
      fill="currentColor"
      height="16"
      viewBox="0 0 29.37 21.88"
      width="16"
      xmlns="http://www.w3.org/2000/svg"
    >
      <title
        id="testId"
      />
      <path
        d="M26.71,3.06,11.89,17.88,4.4,10.4.87,13.93l11,11L30.24,6.59Z"
        transform="translate(-0.87 -3.06)"
      />
    </svg>
  </button>
</div>
`;

exports[`Button Icon With Text Button Snapshot should render with updated shape 1`] = `
<div>
  <button
    aria-label="Check Icon"
    class="css-1re1hac"
    icon="[object Object]"
    iconposition="right"
    id="testId"
  >
    <span
      class="css-4fhr0b-SpanTextLeft e1cefif80"
    >
      Test Text
       
    </span>
    <svg
      aria-labelledby="testId"
      class="icon"
      fill="currentColor"
      height="16"
      viewBox="0 0 29.37 21.88"
      width="16"
      xmlns="http://www.w3.org/2000/svg"
    >
      <title
        id="testId"
      />
      <path
        d="M26.71,3.06,11.89,17.88,4.4,10.4.87,13.93l11,11L30.24,6.59Z"
        transform="translate(-0.87 -3.06)"
      />
    </svg>
  </button>
</div>
`;

exports[`Button Icon With Text Button Snapshot should render with updated text transform 1`] = `
<div>
  <button
    aria-label="Check Icon"
    class="css-1q88xy7"
    icon="[object Object]"
    iconposition="right"
    id="testId"
  >
    <span
      class="css-4fhr0b-SpanTextLeft e1cefif80"
    >
      Test Text
       
    </span>
    <svg
      aria-labelledby="testId"
      class="icon"
      fill="currentColor"
      height="16"
      viewBox="0 0 29.37 21.88"
      width="16"
      xmlns="http://www.w3.org/2000/svg"
    >
      <title
        id="testId"
      />
      <path
        d="M26.71,3.06,11.89,17.88,4.4,10.4.87,13.93l11,11L30.24,6.59Z"
        transform="translate(-0.87 -3.06)"
      />
    </svg>
  </button>
</div>
`;

exports[`Button Icon With Text Button Snapshot should render with updated variant 1`] = `
<div>
  <button
    aria-label="Check Icon"
    class="css-1pwk3m0"
    icon="[object Object]"
    iconposition="right"
    id="testId"
  >
    <span
      class="css-4fhr0b-SpanTextLeft e1cefif80"
    >
      Test Text
       
    </span>
    <svg
      aria-labelledby="testId"
      class="icon"
      fill="currentColor"
      height="16"
      viewBox="0 0 29.37 21.88"
      width="16"
      xmlns="http://www.w3.org/2000/svg"
    >
      <title
        id="testId"
      />
      <path
        d="M26.71,3.06,11.89,17.88,4.4,10.4.87,13.93l11,11L30.24,6.59Z"
        transform="translate(-0.87 -3.06)"
      />
    </svg>
  </button>
</div>
`;
